--- a/styles.css
+++ b/styles.css
@@ -50,12 +50,8 @@ body {
     cursor: pointer;
 }
 
-.book {
-    color: #1E2D2F;
-    font-size: 3rem;
-}
-
 dialog {
+    transform: translateY(70px);
     width: 400px;
     height: 500px;
     transition-duration: 1;
@@ -85,7 +81,7 @@ form {
 
 input[type="text"], input[type="number"] {
     border: 1px solid black;
-    background-color: #A0A083;
+    background-color: #9DB17C;
     color: #272727;
     height: 25px;
     width: 200px;
@@ -142,4 +138,49 @@ input::-webkit-inner-spin-button {
     background-color: #263630;
     color: #EAEFD3;
     cursor: pointer;
+}
+
+table {
+    width: 30%;
+}
+
+td {
+    text-align: center;
+    color: white;
+    font-size: 1.1rem;
+    background-color:#263630;
+    padding: 0;
+    height: 50px;
+}
+
+td:nth-child(odd) {
+    background-color: #3d5a4f;
+}
+
+td:nth-child(4), td:last-child {
+    background-color: transparent;
+}
+
+.toggle-read, .remove {
+    height: 100%;
+    width: 100%;
+    appearance: none;
+    font-size: 1.2rem;
+    border: none;
+    padding: 0;
+    transition-duration: 0.5s;
+    background-color: transparent;
+    color: #071013;
+    background-color: #f99ea7;
+    cursor: pointer;
+}
+
+.read {
+    background-color: #7CA982;
+}
+
+.remove {
+    font-size: 1.3rem;
+    font-weight: bold;
+    width: 100%;
 }
